--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
         <div class="well">
     <% if current_user.profile %>
         <h2 class="text-center">Your Profile</h2>
-       <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block' %>
+       <%= link_to "Edit your profile", edit_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
        <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
         <% else %>
         <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
@@ -22,7 +22,6 @@
             <%= link_to "Visit the community", "#", class: 'btn btn-default btn-lg btn-block' %>
         </div>
     </div>
-    
     <% else %>
     <div class="col-md-6">
         <div class="well">
